@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-20T16:29:35Z",
+  "timestamp" : "2022-08-21T02:19:45Z",
   "count_outdated" : 746,
   "uniques_outdated" : 388,
-  "count" : 753,
-  "uniques" : 394,
+  "count" : 754,
+  "uniques" : 395,
   "clones" : [
     {
       "timestamp": "2022-08-07T00:00:00Z",
@@ -35,6 +35,13 @@
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
